Bug-fix-#19868 Arrows are now not overflowing the parent container
splash-page.component.css

--- a/core/templates/pages/splash-page/splash-page.component.css
+++ b/core/templates/pages/splash-page/splash-page.component.css
@@ -138,7 +138,7 @@
   color: #6d6d6d;
   font-size: 3.0em;
   margin-right: 20px;
-  margin-top: 50px;
+  margin-top: 28px;
 }
 
 .splash-page .splash-arrows-container {
